--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -22,10 +28,12 @@
     "eslint": "^7.30.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "postcss": "^8.3.5",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.3.2",
     "style-loader": "^3.1.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
