--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
       "path": "./node_modules/cz-customizable"
     }
   },
-  "lint-staged": {
-    "*.{tsx, scss, jsx, js, css, html}": [
-      "prettier --write",
-      "eslint --cache --fix",
-      "git add"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "*.{js,vue,jsx,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -50,7 +50,8 @@
     "eslint-plugin-react": "^7.24.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.1",
+    "husky": "4.2.5",
+    "lint-staged": "^11.0.1",
     "postcss": "^8.3.5",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^6.1.1",
