--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build-pro": "webpack --mode=production",
     "build": "webpack --mode=development",
     "start": "webpack serve --mode=development",
     "lint-staged": "lint-staged",
@@ -43,12 +44,12 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "commitizen": "^4.2.4",
     "css-loader": "^5.2.7",
+    "cssnano": "^5.0.6",
     "cz-customizable": "^6.3.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "4.2.5",
     "lint-staged": "^11.0.1",
