--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "lint-staged": {
     "*.{js,jsx,tsx}": [
       "prettier --write",
-      "eslint --cache --fix",
-      "git add"
+      "eslint --cache --fix"
     ]
   },
   "devDependencies": {
