--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
