--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "baseUrl": ".", 
     "paths": {
       "@src/*":  ["src/*"],
-      "@Comp/*":  ["src/components/*"],
+      "@comp/*":  ["src/components/*"],
+      "@pages/*":  ["src/pages/*"],
     }
   }
 }
