--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
   "dependencies": {
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "connected-react-router": "^6.9.1",
+    "dva": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3"
   }
 }
